--- a/templates/core/logout.html
+++ b/templates/core/logout.html
@@ -1,30 +1,30 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
 
 {% block title %}Logout Confirmation - GradeBench{% endblock %}
+{% block page_title %}Logout Confirmation{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-6 mx-auto">
         <div class="card shadow">
-            <div class="card-header bg-primary text-white">
-                <h2 class="mb-0">Logout Confirmation</h2>
+            <div class="card-header">
+                <h4 class="card-title">Logout Confirmation</h4>
             </div>
             <div class="card-body">
                 <p class="lead">Are you sure you want to logout?</p>
                 
-                <div class="d-flex gap-2 mt-4">
+                <div class="d-flex gap-2 mt-4 justify-content-center">
                     <form method="post">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">
-                            <i class="bi bi-box-arrow-right me-2"></i>Yes, Logout
-                        </button>
+                        {% bootstrap_button "Yes, Logout" button_type="submit" button_class="btn-danger" %}
                     </form>
                     <a href="{% url 'home' %}" class="btn btn-secondary">
-                        <i class="bi bi-x-circle me-2"></i>Cancel
+                        Cancel
                     </a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-{% endblock %} 
+{% endblock %}
