--- a/templates/core/profile.html
+++ b/templates/core/profile.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load user_timezone %}
+{% load django_bootstrap5 %}
 
 {% block title %}Profile - GradeBench{% endblock %}
 {% block page_title %}User Profile{% endblock %}
@@ -36,13 +37,13 @@
                 <hr>
                 <div class="button-container">
                     <div class="row">
-                        <div class="col-lg-4 col-md-6 col-6 ml-auto">
+                        <div class="col-lg-4 col-md-6 col-6">
                             <h5>5<br><small>Repos</small></h5>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">
+                        <div class="col-lg-4 col-md-6 col-6">
                             <h5>128<br><small>Commits</small></h5>
                         </div>
-                        <div class="col-lg-4 mr-auto">
+                        <div class="col-lg-4">
                             <h5>92.5%<br><small>Grade</small></h5>
                         </div>
                     </div>
@@ -59,81 +60,78 @@
             <div class="card-body">
                 <form id="profile-form" method="POST" action="{% url 'profile' %}">
                     {% csrf_token %}
-                    <div class="row">
-                        <div class="col-md-6 pr-1">
-                            <div class="form-group">
-                                <label>Username</label>
-                                <input type="text" class="form-control" name="username" value="{{ user.username }}">
-                                <small class="form-text text-muted">Your username is your email by default</small>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" name="username" value="{{ user.username }}">
+                                <div class="form-text">Your username is your email by default</div>
                             </div>
                         </div>
-                        <div class="col-md-6 pl-1">
-                            <div class="form-group">
-                                <label>Email address</label>
-                                <input type="email" class="form-control" name="email" value="{{ user.email }}">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 pr-1">
-                            <div class="form-group">
-                                <label>First Name</label>
-                                <input type="text" class="form-control" name="first_name" value="{{ user.first_name }}">
-                            </div>
-                        </div>
-                        <div class="col-md-6 pl-1">
-                            <div class="form-group">
-                                <label>Last Name</label>
-                                <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}">
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="email" name="email" value="{{ user.email }}">
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="first_name" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="first_name" name="first_name" value="{{ user.first_name }}">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="last_name" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="last_name" name="last_name" value="{{ user.last_name }}">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row g-3">
                         <div class="col-md-12">
-                            <div class="form-group">
-                                <label>GitHub Username</label>
-                                <input type="text" class="form-control" disabled value="{{ profile.github_username|default:'' }}">
+                            <div class="mb-3">
+                                <label for="github_username" class="form-label">GitHub Username</label>
+                                <input type="text" class="form-control" id="github_username" disabled value="{{ profile.github_username|default:'' }}">
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row g-3">
                         <div class="col-md-6">
-                            <div class="form-group">
-                                <label>Phone Number</label>
-                                <input type="text" class="form-control" name="phone_number" value="{{ profile.phone_number|default:'' }}">
+                            <div class="mb-3">
+                                <label for="phone_number" class="form-label">Phone Number</label>
+                                <input type="text" class="form-control" id="phone_number" name="phone_number" value="{{ profile.phone_number|default:'' }}">
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
-                                <label>Time Zone</label>
-                                <select class="form-control" name="timezone">
+                            <div class="mb-3">
+                                <label for="timezone" class="form-label">Time Zone</label>
+                                <select class="form-select" id="timezone" name="timezone">
                                     {% for tz in timezones %}
                                         <option value="{{ tz }}" {% if profile.timezone == tz %}selected{% endif %}>{{ tz }}</option>
                                     {% endfor %}
                                 </select>
-                                <small class="form-text text-muted">Select your local time zone for date and time display</small>
+                                <div class="form-text">Select your local time zone for date and time display</div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row g-3">
                         <div class="col-md-12">
-                            <div class="form-group">
-                                <label>About Me</label>
-                                <textarea class="form-control textarea" name="bio">{{ profile.bio|default:'' }}</textarea>
+                            <div class="mb-3">
+                                <label for="bio" class="form-label">About Me</label>
+                                <textarea class="form-control" id="bio" name="bio" rows="3">{{ profile.bio|default:'' }}</textarea>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="update ml-auto mr-auto">
-                            <button type="submit" class="btn btn-primary btn-round">Update Profile</button>
-                        </div>
+                    <div class="text-center mt-4">
+                        {% bootstrap_button "Update Profile" button_type="submit" button_class="btn-primary btn-round" %}
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-
 {% endblock %}
 
 {% block extra_js %}
