--- a/templates/styleguide.html
+++ b/templates/styleguide.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load django_bootstrap5 %}
+{% load dict_filters %}
 
 {% block title %}Style Guide | GradeBench{% endblock %}
 {% block page_title %}GradeBench Style Guide{% endblock %}
@@ -498,7 +501,7 @@
     </div>
 
     <!-- Utility Classes -->
-    <div class="row mt-4 mb-5">
+    <div class="row mt-4">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
@@ -538,6 +541,105 @@
                     </div>
                     <div class="d-flex align-items-center bg-light p-3 mb-3" style="height: 100px;">
                         <div class="bg-primary text-white p-2">Vertically Centered</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Django Bootstrap 5 Components -->
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Django Bootstrap 5 Components</h4>
+                    <p class="card-category">Reusable template components using django-bootstrap5</p>
+                </div>
+                <div class="card-body">
+                    <h5>Bootstrap Form Components</h5>
+                    <div class="row mb-4">
+                        <div class="col-md-6">
+                            <p><code>&#123;% bootstrap_form form %&#125;</code></p>
+                            <p>Renders a complete form with all fields.</p>
+                            
+                            <p><code>&#123;% bootstrap_field form.field_name %&#125;</code></p>
+                            <p>Renders a single field with label and help text.</p>
+                            
+                            <p><code>&#123;% bootstrap_button "Submit" button_type="submit" button_class="btn-primary" %&#125;</code></p>
+                            <p>Renders a button with specified type and class.</p>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                {% bootstrap_button "Primary Button" button_class="btn-primary" %}
+                            </div>
+                            <div class="mb-3">
+                                {% bootstrap_button "Secondary Button" button_class="btn-secondary" %}
+                            </div>
+                            <div class="mb-3">
+                                {% bootstrap_alert "This is a bootstrap alert" alert_type="info" %}
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <h5>Custom Reusable Components</h5>
+                    <div class="row mb-4">
+                        <div class="col-md-6">
+                            <h6>Card Component</h6>
+                            <p><code>&#123;% include 'components/card.html' with title="Card Title" subtitle="Card Subtitle" %&#125;
+    &#123;% block card_content %&#125;
+        &lt;!-- Content goes here --&gt;
+    &#123;% endblock %&#125;
+&#123;% endinclude %&#125;</code></p>
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Alert Component</h6>
+                            <p><code>&#123;% include 'components/alert.html' with type="info" title="Alert Title" %&#125;
+    &#123;% block alert_content %&#125;
+        &lt;!-- Alert content goes here --&gt;
+    &#123;% endblock %&#125;
+&#123;% endinclude %&#125;</code></p>
+                        </div>
+                    </div>
+                    
+                    <h5>Form Example with Bootstrap 5</h5>
+                    <div class="row">
+                        <div class="col-md-8 offset-md-2">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 class="card-title">Sample Form</h5>
+                                </div>
+                                <div class="card-body">
+                                    <form>
+                                        {% csrf_token %}
+                                        <div class="mb-3">
+                                            <label for="username" class="form-label">Username</label>
+                                            <input type="text" class="form-control" id="username" name="username">
+                                            <div class="form-text">Enter your username</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="email" class="form-label">Email address</label>
+                                            <input type="email" class="form-control" id="email" name="email">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="category" class="form-label">Category</label>
+                                            <select class="form-select" id="category" name="category">
+                                                <option value="">Select a category</option>
+                                                <option value="1">Option 1</option>
+                                                <option value="2">Option 2</option>
+                                                <option value="3">Option 3</option>
+                                            </select>
+                                        </div>
+                                        <div class="mb-3 form-check">
+                                            <input type="checkbox" class="form-check-input" id="remember" name="remember">
+                                            <label class="form-check-label" for="remember">Remember me</label>
+                                        </div>
+                                        <div class="text-center mt-4">
+                                            {% bootstrap_button "Submit" button_type="submit" button_class="btn-primary" %}
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
