--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -1,6 +1,16 @@
 /**
  * GradeBench CSS Variables
  * This file contains all the variables used across the application
+ *
+ * Note: For buttons with the btn-round class, we use the Paper Dashboard color palette:
+ * Primary:   #7A9E9F (turquoise)
+ * Secondary: #66615B (gray)
+ * Success:   #7AC29A (green)
+ * Info:      #68B3C8 (light blue)
+ * Warning:   #F3BB45 (yellow)
+ * Danger:    #EB5E28 (orange)
+ * 
+ * For standard Bootstrap elements, we use the color palette defined below.
  */
 
 :root {
