--- a/templates/canvas/dashboard.html
+++ b/templates/canvas/dashboard.html
@@ -162,10 +162,10 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <a href="{% url 'canvas_course_detail' course_id=item.course.canvas_id %}" class="btn btn-info btn-xs">
+                                    <a href="{% url 'canvas_course_detail' course_id=item.course.canvas_id %}" class="btn btn-info btn-round btn-sm">
                                         <i class="fa fa-eye"></i> View
                                     </a>
-                                    <a href="{% url 'canvas_sync_course' course_id=item.course.canvas_id %}" class="btn btn-default btn-xs">
+                                    <a href="{% url 'canvas_sync_course' course_id=item.course.canvas_id %}" class="btn btn-default btn-round btn-sm">
                                         <i class="fa fa-refresh"></i> Sync
                                     </a>
                                 </td>
@@ -177,7 +177,7 @@
                     <div class="text-center">
                         <h3>No courses found</h3>
                         <p>Click the 'Add Courses from Canvas' button to fetch courses from Canvas.</p>
-                        <button id="openSyncModal" class="btn btn-primary mt-3" type="button" data-bs-toggle="modal" data-bs-target="#syncCoursesModal">
+                        <button id="openSyncModal" class="btn btn-primary btn-round mt-3" type="button" data-bs-toggle="modal" data-bs-target="#syncCoursesModal">
                             <i class="fa fa-plus"></i> Add Courses from Canvas
                         </button>
                     </div>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-12 text-center">
-                        <a href="{% url 'canvas_setup' %}" class="btn btn-primary btn-fill">
+                        <a href="{% url 'canvas_setup' %}" class="btn btn-primary btn-round">
                             <i class="fa fa-cog"></i> Update Configuration
                         </a>
                     </div>
@@ -271,8 +271,8 @@
       <div class="modal-body">
         <div id="coursesLoading">Loading courses...</div>
         <div id="coursesList" class="initially-hidden">
-          <button class="btn btn-link" onclick="selectAllCourses(true)">Select All</button>
-          <button class="btn btn-link" onclick="selectAllCourses(false)">Deselect All</button>
+          <button class="btn btn-link btn-sm" onclick="selectAllCourses(true)">Select All</button>
+          <button class="btn btn-link btn-sm" onclick="selectAllCourses(false)">Deselect All</button>
           <ul id="coursesCheckboxList" class="courses-checkbox-list list-unstyled mt-2"></ul>
         </div>
         <div id="coursesError" class="alert alert-danger initially-hidden"></div>
@@ -284,9 +284,9 @@
           </div>
           <span class="ms-2">Syncing courses, please wait...</span>
         </div>
-        <button id="syncSelectedBtn" class="btn btn-primary" onclick="syncSelectedCourses()">Sync Selected</button>
-        <button id="syncAllBtn" class="btn btn-secondary" onclick="syncAllCourses()">Sync All</button>
-        <button id="closeModalBtn" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+        <button id="syncSelectedBtn" class="btn btn-primary btn-round" onclick="syncSelectedCourses()">Sync Selected</button>
+        <button id="syncAllBtn" class="btn btn-secondary btn-round" onclick="syncAllCourses()">Sync All</button>
+        <button id="closeModalBtn" class="btn btn-outline-secondary btn-round" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
