--- a/templates/canvas/setup.html
+++ b/templates/canvas/setup.html
@@ -33,7 +33,7 @@
                         <label for="apiKeyInput" class="form-label">{{ form.api_key.label }}</label>
                         <div class="input-group">
                             {{ form.api_key }}
-                            <button class="btn btn-outline-secondary" type="button" id="toggleApiKey">
+                            <button class="btn btn-outline-secondary btn-round" type="button" id="toggleApiKey">
                                 <i class="fa fa-eye"></i>
                             </button>
                         </div>
@@ -73,7 +73,7 @@
                     </div>
                     
                     <div class="text-center mt-4">
-                        {% bootstrap_button "Save Configuration" button_type="submit" button_class="btn-primary btn-fill" %}
+                        {% bootstrap_button "Save Configuration" button_type="submit" button_class="btn-primary btn-round" %}
                     </div>
                 </form>
             </div>
