--- a/templates/canvas/groups/index.html
+++ b/templates/canvas/groups/index.html
@@ -21,16 +21,16 @@
                     <p class="card-category">Manage Canvas groups and student memberships</p>
                 </div>
                 <div>
-                    <a href="{% url 'canvas_course_detail' course_id=course.canvas_id %}" class="btn btn-sm btn-outline-primary">
+                    <a href="{% url 'canvas_course_detail' course_id=course.canvas_id %}" class="btn btn-sm btn-outline-primary btn-round">
                         <i class="fa fa-arrow-left"></i> Back to Course
                     </a>
-                    <a href="{% url 'canvas_create_group_set' course_id=course.canvas_id %}" class="btn btn-sm btn-success">
+                    <a href="{% url 'canvas_create_group_set' course_id=course.canvas_id %}" class="btn btn-sm btn-success btn-round">
                         <i class="fa fa-plus"></i> New Group Set
                     </a>
-                    <button id="syncGroupsBtn" class="btn btn-sm btn-primary">
+                    <button id="syncGroupsBtn" class="btn btn-sm btn-primary btn-round">
                         <i class="fa fa-refresh"></i> Sync Groups
                     </button>
-                    <a href="{% url 'canvas_push_group_memberships' course_id=course.canvas_id %}" class="btn btn-sm btn-info">
+                    <a href="{% url 'canvas_push_group_memberships' course_id=course.canvas_id %}" class="btn btn-sm btn-info btn-round">
                         <i class="fa fa-upload"></i> Push Memberships
                     </a>
                 </div>
@@ -84,15 +84,15 @@
                                 <div class="d-flex justify-content-between">
                                     <h5>{{ cat_data.category.name }}</h5>
                                     <div class="category-actions">
-                                        <a href="{% url 'canvas_edit_group_set' course_id=course.canvas_id group_set_id=cat_data.category.id %}" class="btn btn-sm btn-primary">
+                                        <a href="{% url 'canvas_edit_group_set' course_id=course.canvas_id group_set_id=cat_data.category.id %}" class="btn btn-sm btn-primary btn-round">
                                             <i class="fa fa-pencil"></i> Edit
                                         </a>
-                                        <button class="btn btn-sm btn-danger delete-group-set-btn"
+                                        <button class="btn btn-sm btn-danger btn-round delete-group-set-btn"
                                                 data-category-id="{{ cat_data.category.id }}"
                                                 data-category-name="{{ cat_data.category.name }}">
                                             <i class="fa fa-trash"></i> Delete
                                         </button>
-                                        <a href="{% url 'canvas_create_group_alias' course_id=course.canvas_id group_set_id=cat_data.category.id %}" class="btn btn-sm btn-success">
+                                        <a href="{% url 'canvas_create_group_alias' course_id=course.canvas_id group_set_id=cat_data.category.id %}" class="btn btn-sm btn-success btn-round">
                                             <i class="fa fa-plus"></i> Add Group
                                         </a>
                                     </div>
@@ -161,10 +161,10 @@
         <div class="card-header d-flex justify-content-between align-items-center py-2">
             <h6 class="mb-0 group-name"></h6>
             <div class="group-actions">
-                <a href="#" class="btn btn-sm btn-primary edit-group-btn">
+                <a href="#" class="btn btn-sm btn-primary btn-round edit-group-btn">
                     <i class="fa fa-pencil"></i> Edit
                 </a>
-                <button class="btn btn-sm btn-danger delete-group-btn">
+                <button class="btn btn-sm btn-danger btn-round delete-group-btn">
                     <i class="fa fa-trash"></i>
                 </button>
             </div>
@@ -200,7 +200,7 @@
         <div class="card-header d-flex justify-content-between align-items-center py-2">
             <h6 class="mb-0">Unassigned Students</h6>
             <div class="unassigned-actions">
-                <button class="btn btn-sm btn-warning random-assign-btn">
+                <button class="btn btn-sm btn-warning btn-round random-assign-btn">
                     <i class="fa fa-random"></i> Random Assign
                 </button>
             </div>
@@ -219,8 +219,8 @@
         <strong>Unsaved changes!</strong> You have made changes to student assignments that haven't been saved.
     </div>
     <div class="banner-actions">
-        <button id="discardChangesBtn" class="btn btn-sm btn-secondary me-2">Discard Changes</button>
-        <button id="saveChangesBtn" class="btn btn-sm btn-warning">Save Changes</button>
+        <button id="discardChangesBtn" class="btn btn-sm btn-secondary btn-round me-2">Discard Changes</button>
+        <button id="saveChangesBtn" class="btn btn-sm btn-warning btn-round">Save Changes</button>
     </div>
 </div>
 
@@ -236,8 +236,8 @@
         Are you sure you want to delete this item?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+        <button type="button" class="btn btn-secondary btn-round" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger btn-round" id="confirmDeleteButton">Delete</button>
       </div>
     </div>
   </div>
@@ -649,11 +649,11 @@
                 const createGroupBtn = document.createElement('a');
                 if (courseId && data.category && data.category.id) {
                     createGroupBtn.href = `/canvas/course/${courseId}/group_set/${data.category.id}/group/create/`;
-                    createGroupBtn.className = 'btn btn-primary';
+                    createGroupBtn.className = 'btn btn-primary btn-round';
                     createGroupBtn.innerHTML = '<i class="fa fa-plus"></i> Create Group';
                 } else {
                     // If we can't build the URL, make it a disabled button instead
-                    createGroupBtn.className = 'btn btn-secondary disabled';
+                    createGroupBtn.className = 'btn btn-secondary btn-round disabled';
                     createGroupBtn.innerHTML = '<i class="fa fa-plus"></i> Create Group';
                     createGroupBtn.setAttribute('aria-disabled', 'true');
                 }
